fix header z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ header {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    z-index: 9999;
 }
 
 header h1 {
